src/css/styles.css
@import './range.css';
@import './summary.css';

*,
*::after,
*::before {
  box-sizing: border-box;
}

::placeholder {
  color: #ccc;
}

::selection {
  background-color: #d3edff;
}

::-webkit-calendar-picker-indicator {
  display: none;
}

html,
button {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

button,
input {
  -webkit-touch-callout: none;
}

.wrapper {
  background-color: #fff;
  background-image:
    linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee),
    linear-gradient(45deg, #eee 25%, transparent 25%, transparent 75%, #eee 75%, #eee);
  background-position: 0 0, 10px 10px;
  background-size: 21px 21px;
  padding: 0;
  margin: 0;
}

.sitebar {
  position: relative;
  background-color: #f5f5f5;
  padding: 1.3em 2em;
  margin: 8px;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
}

.fields {
  border: none;
  padding: 0;
  margin: 0;
}

.title {
  display: block;
  font-size: 1.5em;
  font-weight: normal;
  padding: 0;
  margin: 0.7em 0;
  text-shadow: 1px 1px 0 #fff;
  outline: none;
  user-select: none;
  cursor: pointer;
}

.field__box {
  display: block;
}

.field {
  padding: 5px 15px;
  width: 100%;
  border: 2px solid #c6e2f7;
  font-size: 1em;
  font-family: "Courier New", Courier, monospace;
  border-radius: 6px;
  margin: 0.5em 0;
  outline: none;
}

.field__number {
  margin: 0.3em 0;
  user-select: none;
}

.field__output {
  cursor: copy;
}

.field__label {
  cursor: pointer;
  background-color: #fff;
}

.field__label::before {
  content: "";
  width: 1em;
  height: 1em;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 16'%3E%3Cpath d='M2 13h4v1H2v-1zm5-6H2v1h5V7zm2 3V8l-3 3 3 3v-2h5v-2H9zM4.5 9H2v1h2.5V9zM2 12h2.5v-1H2v1zm9 1h1v2c-.02.28-.11.52-.3.7-.19.18-.42.28-.7.3H1c-.55 0-1-.45-1-1V4c0-.55.45-1 1-1h3c0-1.11.89-2 2-2 1.11 0 2 .89 2 2h3c.55 0 1 .45 1 1v5h-1V6H1v9h10v-2zM2 5h8c0-.55-.45-1-1-1H8c-.55 0-1-.45-1-1s-.45-1-1-1-1 .45-1 1-.45 1-1 1H3c-.55 0-1 .45-1 1z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
  display: inline-block;
}

.picker {
  width: 100%;
  height: 2em;
  padding: 0;
  margin: 0;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid #c6e2f7;
  border-radius: 6px;
}

.btn {
  font-size: 1em;
  padding: 5px 15px;
  border-radius: 6px;
  user-select: none;
  -webkit-touch-callout: none;
  text-decoration: none;
  display: inline-block;
  cursor: pointer;
  background-color: #00bcd4;
  color: #fff;
  outline: none;
  position: relative;
  transition: all 0.1s ease-in;
}

.btn__create {
  margin-top: 0.5em;
  width: 100%;
  border: none;
  overflow: hidden;
}

.btn__create:hover {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
}

.btn__create::after {
  content: "";
  background-color: #00abd4;
  display: block;
  position: absolute;
  padding-top: 300%;
  padding-left: 350%;
  margin-left: -20px !important;
  margin-top: -120%;
  opacity: 0;
  transition: all 1s;
  border-radius: 6px;
}

.btn__create:active::after {
  padding: 0;
  margin: 0;
  opacity: 1;
  transition: 0s;
}

.btn__output {
  margin-top: 1em;
  font-weight: bold;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
}

.btn__output:hover {
  text-decoration: none;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
  transform: scale(1.01);
}

.btn__output::before {
  content: "";
  display: inline-block;
  width: 1em;
  height: 1em;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 768 768' height='16' width='16'%3E%3Cpath fill='%23fff' d='M691.199 499.2v153.6c0 10.598-4.262 20.16-11.251 27.149s-16.55 11.251-27.149 11.251h-537.599c-10.598 0-20.16-4.262-27.149-11.251s-11.251-16.55-11.251-27.149v-153.6c0-21.196-17.204-38.4-38.4-38.4s-38.4 17.203-38.4 38.4v153.6c0 31.796 12.941 60.672 33.754 81.446s49.651 33.754 81.446 33.754h537.599c31.795 0 60.672-12.941 81.446-33.754s33.754-49.651 33.754-81.446v-153.6c0-21.196-17.203-38.4-38.4-38.4s-38.4 17.203-38.4 38.4zM422.4 406.503v-368.102c0-21.197-17.204-38.4-38.4-38.4s-38.4 17.203-38.4 38.4v368.102l-126.451-126.451c-15.015-15.015-39.322-15.015-54.298 0s-15.015 39.322 0 54.298l191.999 191.999c3.532 3.533 7.757 6.375 12.442 8.333s9.716 2.919 14.707 2.919c9.831 0 19.66-3.763 27.148-11.251l191.999-191.999c15.015-15.015 15.015-39.322 0-54.298s-39.322-15.015-54.298 0z'/%3E%3C/svg%3E");
  background-repeat: no-repeat;
}

.btn_random {
  border: 1px solid #00abd4;
  border-radius: 50%;
  outline: none;
  background-color: #fff;
  transition: all 0.1s ease-in;
  cursor: pointer;
  position: absolute;
  width: 50px;
  height: 50px;
  top: 20px;
  right: 20px;
  padding: 0;
  margin: 0;
  z-index: 5;
}

.btn_random:hover {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
}

.btn_random:active {
  transform: scale(0.9);
}

.content {
  max-width: 850px;
  position: relative;
  padding: 1em 2.5em;
}

.content__title {
  font-weight: normal;
  font-size: 1.5em;
  padding: 0;
  margin: 0.7em 0;
  text-shadow: 1px 1px 0 #fff;
}

.output__image {
  height: 200px;
  min-width: 200px;
  background-repeat: repeat;
  background-color: transparent;
  background-position: 0 0, 10px 10px;
  background-size: 21px 21px;
  position: relative;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
  transition: box-shadow 0.1s ease-in;
}

.output__image::after {
  content: "1x1";
  font-family: 'Courier New', Courier, monospace;
  position: absolute;
  bottom: 10px;
  right: 10px;
  display: inline-block;
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 6px;
  padding: 5px 10px;
}

.link {
  color: #176ced;
  background-color: #fff;
  display: inline-block;
  text-decoration: none;
}

.link:hover {
  text-decoration: underline;
}

.footer {
  padding: 0.5em 0;
  text-align: center;
  position: relative;
  width: 100%;
}

.footer__link {
  font-size: 80%;
  margin: 0 1em;
  line-height: 1.5;
}

@media (min-width: 700px) {
  .sitebar {
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    max-width: 305px;
    width: 100%;
    background-color: #f5f5f5;
    border-width: 0 2px 0 0;
    padding: 1.3em;
    margin: 0;
    overflow-x: auto;
  }

  .content {
    margin-left: 320px;
  }

  .footer {
    margin-top: 30px;
  }

  .footer__link {
    font-size: 100%;
  }
}

@media (min-width: 1500px) {
  .content {
    margin-left: auto;
    margin-right: auto;
  }

  .content__title {
    font-size: 2em;
  }
}

